--- a/climate.ipynb
+++ b/climate.ipynb
@@ -1561,7 +1561,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:pythondata] *",
+   "display_name": "Python [conda env:pythondata]",
    "language": "python",
    "name": "conda-env-pythondata-py"
   },
