--- a/temp_analysis1.ipynb
+++ b/temp_analysis1.ipynb
@@ -449,11 +449,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The p value is not close to zero. With the p value being above 0.05, it supports the null hypothesis coming to the conclusion there is no similarity to Dec and June"
+   ]
   }
  ],
  "metadata": {
